# resume_api_and_bindings

./: Cargo.toml  LICENSE
backend/: Cargo.toml  README.md
backend/src/: bindings.rs  lib.rs
backend/src/model/: contact_info.rs  mod.rs  position.rs
frontend/: index.html
src/: bindings.rs  lib.rs
src/model/: contact_info.rs  full_resume.rs  mod.rs  position.rs
