[package]
name = "ben_peinhardt_resume_api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.7.2", features = ["web-axum"] }
axum = "0.5.17"
sync_wrapper = "0.1.1"
serde = "1.0.147"
serde_json = "1.0.87"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.37"
tokio = { version = "1.0", features = ["full"] }
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.1.0"
